# claude-linear-worktree

./: .gitignore  Cargo.toml  README.md  hk.pkl  mise.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-17-claude-lwt.md
docs/superpowers/specs/: 2026-04-17-claude-lwt-design.md
queries/: create_issue.graphql  fetch_issue.graphql  list_teams.graphql
src/: activate.rs  cli.rs  git.rs  github.rs  lib.rs  main.rs  prompt.rs
src/linear/: auth.rs  mod.rs  queries.rs
tests/: cli_parse.rs  git_worktree.rs  linear_create.rs  linear_fetch.rs
