[package]
name = "claude-lwt"
version = "0.4.0"
edition = "2021"
description = "Launch claude-code in a git worktree for a Linear ticket"
license = "MIT"
repository = "https://github.com/NorthIsUp/claude-linear-worktree"

[[bin]]
name = "claude-lwt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dialoguer = { version = "0.11", default-features = false, features = ["editor"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
graphql_client = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
